# cvefixer

./: .gitignore  .rubocop.yml  Cargo.toml  Gemfile  LICENSE  README.md  Rakefile  cvefixer-0.5.0.gem  cvefixer.gemspec
.github/: dependabot.yml
.github/workflows/: rust.yml
exe/: cvefixer
lib/: config.rb  cvefixer.rb  helpers.rb  rakesible.rb
lib/custom_list/: url_downloads.rb
lib/rake_helpers/: taskgroup.rb
lib/taskgroups/: hooks.rb  misc.rake  misc.rb  os.rake  os.rb  ruby.rake  ruby.rb  rust.rake  rust.rb
src/: config.rs  errors.rs  helpers.rs  main.rs
src/task/: bun.rs  deno.rs  flatpak.rs  hooks.rs  mod.rs  os.rs  ruby.rs  rust.rs
test/: apps.json
