[package]
name = "cvefixer"
version = "0.9.0"
edition = "2021"
description = "Fix all vulnerabilities that are fixed."
license = "BSD-3-Clause"
repository = "https://github.com/janie314/cvefixer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
fastrand = "2.1.0"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
time = { version = "0.3.36", features = ["macros", "parsing", "local-offset"] }
which = "6.0.1"
